//file:noinspection GradlePackageUpdate
plugins {
    id 'org.springframework.boot' version '3.4.2'
    id 'io.freefair.lombok' version '8.12.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

repositories {
    mavenCentral()
}

ext {
    cehComponentsVersion = '1.0.51'
}

bootJar {
    archiveFileName = 'app.jar'
}

compileJava {
    options.compilerArgs.add '-Xlint:deprecation'
    options.compilerArgs.add '-parameters'
    options.incremental = true
}

java.sourceCompatibility = JavaVersion.VERSION_23

dependencies {
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
    implementation 'com.google.guava:guava:33.2.1-jre'
    implementation 'com.jayway.jsonpath:json-path'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
    implementation 'com.vividsolutions:jts:1.13'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'org.apache.jena:apache-jena-libs:5.3.0'
    implementation 'org.apache.jena:jena-geosparql:5.3.0'
    implementation 'org.apache.solr:solr-solrj:9.6.1'
    implementation 'org.ehcache:ehcache'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.yaml:snakeyaml:1.8'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.xerial:sqlite-jdbc'
    implementation 'org.springframework:spring-jdbc'
    implementation "uk.ac.ceh.components:datastore-git:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-crowd:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:userstore-inmemory:${cehComponentsVersion}"
    implementation "uk.ac.ceh.components:springsecurity-userstore:${cehComponentsVersion}"
    implementation "com.opencsv:opencsv:5.10"
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.xmlunit:xmlunit-core'
    testImplementation 'org.xmlunit:xmlunit-matchers'
    testImplementation 'com.h2database:h2'
}

test {
    useJUnitPlatform()
    testLogging {
        events "skipped", "failed"
    }
}
